<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- App  -->
    <string name="app_name">Online Okey</string>
	<!-- App Name -->
	<string name="brand_bar_app_name">Online Okey</string>
	<!-- Main Screen -->
	<string name="main_screen_login">Play</string>
	<string name="main_screen_signup">Sign Up</string>
	
	<string name="main_screen_icon_description">Online Okey Logo</string>
	
	<!-- Login Screen  -->
    <string name="loginscreen_username">User Name:</string>
    <string name="loginscreen_password">Password:</string>
    <string name="loginscreen_edittext_hint_username">example_user</string>
    <string name="loginscreen_edittext_hint_password">Secret Password</string>
    <string name="loginscreen_checkbox_rememberme">Remember Me</string>
    <string name="loginscreen_button_login">Login</string>
    
    <!-- Signup Screen  -->
    <string name="signupscreen_username">User Name:</string>
	<string name="signupscreen_password">Password:</string>
	<string name="signupscreen_email">Email:</string>
	<string name="signupscreen_password_confirmation">Confirm Password:</string>
	<string name="signupscreen_edittext_hint_username">Examples: example_user, example1234</string>
	<string name="signupscreen_edittext_hint_password">Password: Minimum of 6 characters</string>
	<string name="signupscreen_edittext_hint_email">Email: user@example.com</string>
	<string name="signupscreen_edittext_hint_password_confirmation">Password</string>
	<string name="signupscreen_button_signup">Sign Up</string>
	
	<!-- Lounge Screen -->
	<string name="loungescreen_button_create">Create Room</string>
	<string name="loungescreen_button_refresh">Refresh List</string>
	<string name="loungescreen_textview_noroom_info">No room is available</string>
	<!-- Create Room From -->
	<string name="room_create_form_edittext_hint_roomname">Room Name</string>
	<string name="room_create_form_edittext_roomname">Room Name:</string>
	<string name="room_create_form_edittext_button_create">Create Room</string>
	<string name="room_create_form_edittext_button_cancel">Cancel</string>
	
	<!-- Game Menu -->
	<string name="game_menu_chat">Write Message</string>
	<string name="game_menu_messages">Messages</string>
	<string name="game_menu_force_start">Start Game Now</string>
	
	<!-- Chat Message Form -->
	<string name="chat_message_form_hint">Message &#8230;</string>
	
	
</resources>